# vintran

./: .env.example  .prettierignore  .prettierrc  README.md  pyproject.toml  requirements.txt  run.py  tailwind.config.js
vintran/: __init__.py  forms.py  models.py  routes.py  tasks.py
vintran/html/: download.html  index.html  layout.html  tos.html
